--- a/resume.html
+++ b/resume.html
@@ -4,22 +4,22 @@
 <title></title>
 
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
- </head><body bgcolor="#A0A0A0" vlink="blue" link="blue"><br>
+ </head><body bgcolor="#3511ea" vlink="blue" link="red"><br>
 <style type="text/css">
 <!--
-	p {margin: 0; padding: 0;}	.ft10{font-size:32px;font-family:Times;color:#000000;}
-	.ft11{font-size:16px;font-family:Times;color:#666766;}
-	.ft12{font-size:11px;font-family:Times;color:#000000;}
-	.ft13{font-size:18px;font-family:Times;color:#313c4e;}
-	.ft14{font-size:16px;font-family:Times;color:#000000;}
-	.ft15{font-size:16px;font-family:Times;color:#000000;}
-	.ft16{font-size:9px;font-family:Times;color:#666766;}
-	.ft17{font-size:9px;font-family:Times;color:#000000;}
-	.ft18{font-size:11px;font-family:Times;color:#ffffff;}
-	.ft19{font-size:13px;font-family:Times;color:#000000;}
-	.ft110{font-size:9px;font-family:Times;color:#313c4e;}
-	.ft111{font-size:16px;line-height:20px;font-family:Times;color:#000000;}
-	.ft112{font-size:11px;line-height:16px;font-family:Times;color:#000000;}
+	p {margin: 0; padding: 0;}	.ft10{font-size:32px;font-family:Times;color:hsl(0, 91%, 46%);}
+	.ft11{font-size:16px;font-family:Times;color:#e10821;}
+	.ft12{font-size:11px;font-family:Times;color:hwb(0 10% 13%);}
+	.ft13{font-size:18px;font-family:Times;color:#f71212;}
+	.ft14{font-size:16px;font-family:Times;color:hsl(0, 96%, 51%);}
+	.ft15{font-size:16px;font-family:Times;color:hsl(0, 94%, 50%);}
+	.ft16{font-size:9px;font-family:Times;color:hsl(0, 86%, 47%);}
+	.ft17{font-size:9px;font-family:Times;color:hsl(0, 94%, 50%);}
+	.ft18{font-size:11px;font-family:Times;color:hsl(0, 95%, 50%);}
+	.ft19{font-size:13px;font-family:Times;color:#fc0707;}
+	.ft110{font-size:9px;font-family:Times;color:hsl(0, 93%, 48%);}
+	.ft111{font-size:16px;line-height:20px;font-family:Times;color:hsl(0, 97%, 50%);}
+	.ft112{font-size:11px;line-height:16px;font-family:Times;color:hsl(0, 95%, 50%);}
 	.circular-border {
 		border-radius: 50%;
 		overflow: hidden;
