font color- green

--- a/resume.html
+++ b/resume.html
@@ -4,22 +4,22 @@
 <title></title>
 
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
- </head><body bgcolor="#3511ea" vlink="blue" link="red"><br>
+ </head><body bgcolor="rgba(206, 222, 26, 0.944)" vlink="blue" link="green"><br>
 <style type="text/css">
 <!--
 	p {margin: 0; padding: 0;}	.ft10{font-size:32px;font-family:Times;color:hsl(0, 91%, 46%);}
-	.ft11{font-size:16px;font-family:Times;color:#e10821;}
-	.ft12{font-size:11px;font-family:Times;color:hwb(0 10% 13%);}
-	.ft13{font-size:18px;font-family:Times;color:#f71212;}
-	.ft14{font-size:16px;font-family:Times;color:hsl(0, 96%, 51%);}
-	.ft15{font-size:16px;font-family:Times;color:hsl(0, 94%, 50%);}
-	.ft16{font-size:9px;font-family:Times;color:hsl(0, 86%, 47%);}
-	.ft17{font-size:9px;font-family:Times;color:hsl(0, 94%, 50%);}
-	.ft18{font-size:11px;font-family:Times;color:hsl(0, 95%, 50%);}
-	.ft19{font-size:13px;font-family:Times;color:#fc0707;}
-	.ft110{font-size:9px;font-family:Times;color:hsl(0, 93%, 48%);}
-	.ft111{font-size:16px;line-height:20px;font-family:Times;color:hsl(0, 97%, 50%);}
-	.ft112{font-size:11px;line-height:16px;font-family:Times;color:hsl(0, 95%, 50%);}
+	.ft11{font-size:16px;font-family:Times;color:hwb(123 9% 9% / 0.984);}
+	.ft12{font-size:11px;font-family:Times;color:rgba(26, 222, 33, 0.944);}
+	.ft13{font-size:18px;font-family:Times;color:hwb(122 7% 4%);}
+	.ft14{font-size:16px;font-family:Times;color:hwb(115 4% 2%);}
+	.ft15{font-size:16px;font-family:Times;color:hwb(109 3% 3%);}
+	.ft16{font-size:9px;font-family:Times;color:hwb(119 7% 13%);}
+	.ft17{font-size:9px;font-family:Times;color:hwb(115 3% 3%);}
+	.ft18{font-size:11px;font-family:Times;color:hwb(103 2% 2%);}
+	.ft19{font-size:13px;font-family:Times;color:hsl(99, 98%, 51%);}
+	.ft110{font-size:9px;font-family:Times;color:hwb(97 4% 7%);}
+	.ft111{font-size:16px;line-height:20px;font-family:Times;color:hwb(117 2% 2%);}
+	.ft112{font-size:11px;line-height:16px;font-family:Times;color:hwb(108 2% 2%);}
 	.circular-border {
 		border-radius: 50%;
 		overflow: hidden;
